Fix header not wrapping

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -2,7 +2,7 @@
 $body-background: #430D4B
 $header-background: #210435
 $card-background: #7B337E
-
+    
 body
     background-color: $body-background
     margin: 0
@@ -14,6 +14,7 @@ body
 nav
     display: flex
     flex-direction: row
+    flex-wrap: wrap
     justify-content: space-between
     align-items: flex-start
     margin: 0
@@ -23,6 +24,7 @@ nav
     ul
         display: flex
         flex-direction: row-reverse
+        flex-wrap: wrap
         flex-grow: 1
         li
             list-style: none
@@ -47,7 +49,7 @@ nav
     #main-image
         object-fit: cover
         max-height: 600px
-        min-width: 70vw
+        max-width: 70vw
         filter: drop-shadow(0 0 3px black)
 
 #next-btn, #prev-btn
@@ -66,7 +68,7 @@ nav
 
 .card
     display: grid
-    height: 40em
+    min-height: 40em
     background-color: $card-background
     grid-template-columns: 1fr
     gap: 1rem
@@ -95,9 +97,6 @@ nav
         text-decoration: none
         color: #F5D5E1
 
-@media screen and ( max-width: 460px )
+@media screen and ( max-width: 886px )
     .card-container 
         grid-template-columns: repeat(1, 1fr)
-
-    .card
-        height: min-content
